--- a/examples/m5stack-atom-rs485kit.yaml
+++ b/examples/m5stack-atom-rs485kit.yaml
@@ -13,7 +13,7 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: !secret api_password
+    key: !secret api_encryption_key
 
 ota:
   - platform: esphome
