--- a/examples/m5stack-atom-lite-tail485.yaml
+++ b/examples/m5stack-atom-lite-tail485.yaml
@@ -13,10 +13,11 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: !secret api_password
+    key: !secret api_encryption_key
 
 ota:
-  password: !secret ota_password
+  - platform: esphome
+    password: !secret ota_password
 
 wifi:
   power_save_mode: none
