--- a/examples/esp32_max485.yaml
+++ b/examples/esp32_max485.yaml
@@ -8,7 +8,8 @@ esp32:
 
 # No API if you are using MQTT, password is optional
 api:
-  password: !secret api_password
+  encryption:
+    key: !secret api_encryption_key
 
 ota:
   - platform: esphome
